# triple-scint

./: .gitignore  LICENSE  README.md  core.py  data.py  fit.py  fixedparams.py  freeparams.py  model.py  params.py  pyproject.toml  uncertainty.py  utils.py  visualize.py
scripts/: table.py
triple_scint/: __init__.py  data.py  fit.py  fixedparams.py  freeparams.py  uncertainty.py  utils.py  visualize.py
